k8s/netbox-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox-db
  labels:
    name: netbox-db
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    name: netbox-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: netbox-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: netbox-db
    spec:
      containers:
      - name: postgresql
        image: postgres:9.6.5-alpine
        imagePullPolicy: Always
        ports:
        - name: postgres
          containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 500m
            memory: 256Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: netbox-db
