k8s/netbox-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  labels:
    name: netbox
spec:
  selector:
    name: netbox
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: netbox
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: netbox
    spec:
      imagePullSecrets:
      - name: cencoreg
      containers:
      - name: netbox
        image: blacktourmaline/netbox:v2.2.2
        ports:
        - name: http
          containerPort: 8001
          protocol: TCP
        volumeMounts:
        - name: static-volume
          mountPath: /opt/netbox/netbox/static/
      - name: web
        image: nginx:1.11-alpine
        command: 
          - nginx
          - -g 
          - 'daemon off;'
          - -c 
          - /etc/netbox-nginx/nginx.conf
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/netbox-nginx
        volumeMounts:
        - name: static-volume
          mountPath: /opt/netbox/netbox/static/
      volumes:
        - name: config-volume
          configMap:
            name: netbox
        - name: static-volume
          emptyDir: {}
